Fix problem with z-index through nano.

--- a/src/assets/sass/_material.scss
+++ b/src/assets/sass/_material.scss
@@ -2,7 +2,3 @@
 .md-autocomplete-suggestions-container li .highlight {
   color: rgb(255,87,34);
 }
-
-.md-virtual-repeat-container.md-autocomplete-suggestions-container {
-  z-index: 99;
-}
